--- a/brick.yaml
+++ b/brick.yaml
@@ -3,7 +3,7 @@ description: Creates a clean architecture feature with a feature name
 
 # The following defines the brick repository url.
 # Uncomment and update the following line before publishing the brick.
-repository: https://github.com/my_org/my_repo
+repository: https://github.com/xkaper001/clean_archy_feature/
 
 # The following defines the version and build number for your brick.
 # A version number is three numbers separated by dots, like 1.2.34
